RESOLVED FIXED222458
Fix crashes due to unsupported pixel formats, program generation issues in Metal Angle backend on Simulator
https://bugs.webkit.org/show_bug.cgi?id=222458
Summary Fix crashes due to unsupported pixel formats, program generation issues in Me...
Kyle Piddington
Reported 2021-02-25 21:38:02 PST
Fix crashes due to unsupported pixel formats, program generation issues in Metal Angle backend on Simulator
Attachments
Patch (216.46 KB, patch)
2021-02-25 21:38 PST, Kyle Piddington
no flags
Patch (218.36 KB, patch)
2021-02-26 01:40 PST, Kyle Piddington
no flags
Patch (239.33 KB, patch)
2021-02-26 11:57 PST, Kyle Piddington
ews-feeder: commit-queue-
Patch (239.50 KB, patch)
2021-02-26 12:35 PST, Kyle Piddington
no flags
Patch (238.00 KB, patch)
2021-02-26 16:46 PST, Kyle Piddington
no flags
Kyle Piddington
Comment 1 2021-02-25 21:38:49 PST
EWS Watchlist
Comment 2 2021-02-25 21:39:53 PST
Note that there are important steps to take when updating ANGLE. See https://trac.webkit.org/wiki/UpdatingANGLE
Kyle Piddington
Comment 3 2021-02-26 01:40:19 PST
Kyle Piddington
Comment 4 2021-02-26 11:57:28 PST
Kyle Piddington
Comment 5 2021-02-26 12:35:48 PST
Dean Jackson
Comment 6 2021-02-26 15:27:25 PST
Comment on attachment 421697 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=421697&action=review > Tools/WebKitTestRunner/WebKitTestRunner.xcodeproj/xcshareddata/xcschemes/WebKitTestRunner.xcscheme:38 > + launchStyle = "1" > useCustomWorkingDirectory = "NO" Oops. I'll remove this on landing.
Dean Jackson
Comment 7 2021-02-26 15:46:40 PST
Radar WebKit Bug Importer
Comment 8 2021-02-26 15:47:16 PST
Kyle Piddington
Comment 9 2021-02-26 16:46:38 PST
Reopening to attach new patch.
Kyle Piddington
Comment 10 2021-02-26 16:46:39 PST
Kyle Piddington
Comment 11 2021-02-26 16:53:17 PST
Accidentally reopen'd, Dean forgot to mention this was landed. Committed r273597 (234647@main): <https://commits.webkit.org/234647@main>
Note You need to log in before you can comment on or make changes to this bug.