Fix iOS simulator crashes due to unsupported simulator pixel formats: r8Unorm_srgb, a1bgr5Unorm, b5g6r5Unorm, abgr4Unorm, bgr5A1Unorm, and program generation asserts.

iOS Simulator doesn't support the following packed 16 bit formats natively. While some of these can be emulated, we should fix up the crashing cases first.

Also fix up program generation issues for void fragment shaders

Disable support for PVRTC temporarily, as Non-square / NPOT PVRTC textures are not supported nativley on metal.

https://bugs.webkit.org/show_bug.cgi?id=222458

Patch by Kyle Piddington <kpiddington@apple.com> on 2021-02-26
Reviewed by Dean Jackson.

* src/compiler/translator/TranslatorMetalDirect/EmitMetal.cpp:
(GenMetalTraverser::emitStructDeclaration):
(GenMetalTraverser::emitFunctionReturn):
(GenMetalTraverser::emitFunctionParameter):
* src/compiler/translator/TranslatorMetalDirect/Pipeline.cpp:
(PipelineStructs::matches const):
* src/compiler/translator/TranslatorMetalDirect/Pipeline.h:
(sh::PipelineScoped::matches const):
* src/libANGLE/renderer/metal/TextureMtl.mm:
(rx::TextureMtl::setPerSliceSubImage):
* src/libANGLE/renderer/metal/gen_mtl_format_table.py:
* src/libANGLE/renderer/metal/mtl_format_map.json:
* src/libANGLE/renderer/metal/mtl_format_table_autogen.mm:
(rx::mtl::Format::init):
(rx::mtl::VertexFormat::init):
(rx::mtl::FormatTable::initNativeFormatCapsAutogen):
* src/libANGLE/renderer/metal/mtl_format_utils.mm:
(rx::mtl::FormatTable::initialize):
* src/libANGLE/renderer/metal/mtl_resources.mm:
(rx::mtl::Texture::Make2DTexture):
(rx::mtl::Texture::MakeTexture):

Canonical link: https://commits.webkit.org/234647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273597 268f45cc-cd09-0410-ab3c-d52691b4dbfc