Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/TextureMtl.mm
@@ -1377,7 +1377,6 @@ angle::Result TextureMtl::redefineImage(const gl::Context *context,
                                         const gl::Extents &size)
 {
     bool imageWithinLevelRange = false;
-
     if (isIndexWithinMinMaxLevels(index) && mNativeTexture && mNativeTexture->valid())
     {
         imageWithinLevelRange              = true;
@@ -1611,6 +1610,7 @@ angle::Result TextureMtl::setPerSliceSubImage(const gl::Context *context,
                                               const mtl::TextureRef &image)
 {
     // If source pixels are luminance or RGB8, we need to convert them to RGBA
+   
     if (mFormat.needConversion(pixelsAngleFormat.id))
     {
         return convertAndSetPerSliceSubImage(context, slice, mtlArea, internalFormat, type,
@@ -1880,6 +1880,10 @@ angle::Result TextureMtl::initializeContents(const gl::Context *context,
     const mtl::TextureRef &image = imageDef.image;
     const mtl::Format &format    = contextMtl->getPixelFormat(imageDef.formatID);
     // For Texture's image definition, we always use zero mip level.
+    if(format.metalFormat == MTLPixelFormatInvalid)
+    {
+        return angle::Result::Stop;
+    }
     return mtl::InitializeTextureContents(
         context, image, format,
         mtl::ImageNativeIndex::FromBaseZeroGLIndex(
